--- a/includes/uixpbform/css/uixpbform.editor.css
+++ b/includes/uixpbform/css/uixpbform.editor.css
@@ -11,7 +11,8 @@
     font-size: 12px;
     color: #626262;
     padding: 0 0 0;
-	background: rgba(241,241,241,0.65);
+	background: rgba(241,241,241,0.35);
+	text-shadow: 1px 1px rgba(0,0,0,.4);
 }
 
 .mce-content-body h1,.mce-content-body h2,.mce-content-body h3,.mce-content-body h4,.mce-content-body h5,.mce-content-body h6 {
