--- a/uixpb_templates/css/uix-page-builder.css
+++ b/uixpb_templates/css/uix-page-builder.css
@@ -1983,6 +1983,19 @@ img.uix-pb-img,
     background-size: cover !important;
 }
 
+
+@media all and (max-width: 768px) {
+	.uix-pb-parallax-wrapper {
+		background-position: center center !important;
+		background-attachment: scroll !important;
+		-webkit-background-size: cover !important;
+		-moz-background-size: cover !important;
+		background-size: cover !important;
+	}
+
+}
+
+
 /* A module with a tilting effect. This module is displayed when the script runs. */
 .uix-pb-parallax-wrapper.skew {
 	visibility: hidden;
