--- a/uixpb_templates/css/uix-page-builder.css
+++ b/uixpb_templates/css/uix-page-builder.css
@@ -401,6 +401,10 @@ img.uix-pb-img,
     text-decoration: none;
 }
 
+.flexslider {
+	border: none;
+}
+
 .flexslider:hover .uix-pb-flex-prev {
     left: 0;
 }
@@ -476,6 +480,15 @@ img.uix-pb-img,
 
 .uix-page-builder-section {
     
+}
+
+.uix-page-builder-section h1::before,
+.uix-page-builder-section h2::before,
+.uix-page-builder-section h3::before,
+.uix-page-builder-section h4::before,
+.uix-page-builder-section h5::before,
+.uix-page-builder-section h6::before {
+	display: none;
 }
 
 
@@ -3827,6 +3840,7 @@ ul.uix-pb-menu-embedded,
 ul.uix-pb-menu-embedded li {
     padding: 0;
     margin: 0;
+	
 }
 
 ul.uix-pb-menu-embedded {
@@ -3840,7 +3854,9 @@ ul.uix-pb-menu-embedded {
     border: 1px solid #c6d0da;
 }
 
-
+ul.uix-pb-menu-embedded li {
+	line-height: 50px;
+}
 
 @media all and (max-width: 768px) {
 	
